# BaseNumberTool

./: ALL_BUILD.vcxproj  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  NumberChangeTool.sln  README.md  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  build.bat  cmake_install.cmake  testTool.vcxproj  testTool.vcxproj.filters
buildgoogletest/src/googletest-populate-stamp/: googletest-populate-gitclone-lastrun.txt
buildgoogletest/tmp/: googletest-populate-gitclone.cmake  googletest-populate-gitupdate.cmake  googletest-populate-mkdirs.cmake
headfile/: number.hpp  numberFun.hpp  numberImp.hpp  windowsFrame.hpp
src/: AllChangeNumberFinal.cpp
test/: CMakeLists.txt  testnumber.cpp
testTool.dir/Debug/: testTool.exe.recipe  testTool.ilk
testTool.dir/Debug/testTool.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
